<resources>
    <string name="key_banner" translatable="false">ca-app-pub-2901193013289479/6379425189</string>
    <string name="key_full" translatable="false">ca-app-pub-2901193013289479/2440180175</string>

    <string name="app_name">DetectiveMe</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="continue_arm" translatable="false">Շարունակել Հայերեն</string>
    <string name="continue_ru" translatable="false">Продолжить на Русском</string>
    <string name="continue_us" translatable="false">Continue in English</string>
    <string name="continue_es" translatable="false">Continuar en Español</string>
    <string name="professions">Professions</string>
    <string name="places">Places</string>
    <string name="animals">Animals</string>
    <string name="rules">Rules</string>
    <string name="choose">Choose</string>
    <string name="word_list">Word List</string>
    <string name="player_count">Player Count</string>
    <string name="total_players">Total Players</string>
    <string name="spies_from_total">Spies</string>
    <string name="time_minutes">Time (Minutes)</string>
    <string name="start">Start</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="spy">Spy</string>
    <string name="moreNumberErrorMessage">Spies should be less than total players</string>
    <string name="finish">Finish</string>
    <string name="start_timer">Start Time</string>
    <string name="stop_timer">Finish</string>


    <string-array name="animals">
        <item>Horse</item>
        <item>Eagle</item>
        <item>Shark</item>
        <item>Tiger</item>
        <item>Snake</item>
        <item>Cat</item>
        <item>Dog</item>
        <item>Spider</item>
        <item>Wolf</item>
        <item>Dinosaur</item>
        <item>Elephant</item>
        <item>Leopard</item>
        <item>Crab</item>
        <item>Lion</item>
        <item>Frog</item>
        <item>Orangutan</item>
        <item>Monkey</item>
        <item>Lamb</item>
        <item>Cow</item>
        <item>Turkey</item>
        <item>Camel</item>
        <item>Goat</item>
        <item>Sea calf</item>
        <item>Dolphin</item>
        <item>Sea Horse</item>
        <item>Snail</item>
        <item>Falcon</item>
        <item>Pigeon</item>
        <item>Penguin</item>
        <item>Ant</item>
        <item>Bee</item>
        <item>Pig</item>
        <item>Parrot</item>
        <item>Zebra</item>
        <item>Donkey</item>
        <item>Giraffe</item>
        <item>Flamingo</item>
        <item>Panda</item>
        <item>Kangaroo</item>
        <item>Tiger</item>
        <item>Rabbit</item>
        <item>Fox</item>
        <item>Bear</item>
        <item>Panther</item>
        <item>Mammoth</item>
        <item>Ostrich</item>
        <item>Rhinoceros</item>
        <item>Mink</item>
        <item>Ant</item>
        <item>Crocodile</item>
        <item>Bat</item>
        <item>Butterfly</item>
        <item>Chicken</item>
    </string-array>


    <string-array name="profs">
        <item>Doctor</item>
        <item>Driver</item>
        <item>Astronaut</item>
        <item>Chef</item>
        <item>Police</item>
        <item>Teacher</item>
        <item>Actor</item>
        <item>Architect</item>
        <item>Singer</item>
        <item>Dentist</item>
        <item>Detective</item>
        <item>Writer</item>
        <item>Farmer</item>
        <item>Pilot</item>
        <item>Barber</item>
        <item>Photographer</item>
        <item>Scientist</item>
        <item>Dancer</item>
        <item>Singer</item>
        <item>Clown</item>
        <item>Clown</item>
        <item>Prostitute</item>
        <item>Jeweler</item>
        <item>Seller</item>
        <item>Coach</item>
        <item>Spiritual</item>
        <item>Blogger</item>
        <item>Nurse</item>
        <item>Winemaker</item>
        <item>Designer</item>
        <item>Makeup artist</item>
        <item>Manicure</item>
        <item>Marketer</item>
        <item>Lawyer</item>
        <item>Financier</item>
        <item>Financier</item>
        <item>Psychologist</item>
        <item>Physicist</item>
        <item>Chemist</item>
        <item>Mathematician</item>
        <item>Model</item>
        <item>Humorist</item>
        <item>Blacksmith</item>
        <item>Football player</item>
        <item>Basketball player</item>
        <item>Actor</item>
        <item>Magician</item>
        <item>Dancer</item>
        <item>Reporter</item>
        <item>Host</item>
        <item>Football commentator</item>
        <item>Astronaut</item>
        <item>Bodyguard</item>
        <item>Lawyer</item>
        <item>Taxi Driver</item>
        <item>Nanny</item>
        <item>Cleaner</item>
        <item>Cleaner</item>
        <item>Gardener</item>
        <item>Judge</item>
        <item>Librarian</item>
        <item>Model</item>
        <item>Soldier</item>
        <item>Translator</item>
        <item>Waiter</item>
        <item>Operator</item>
        <item>Director</item>
        <item>Meteorologist</item>
        <item>Economist</item>
        <item>Shipper</item>
    </string-array>


    <string-array name="places">
        <item>Church</item>
        <item>Yard</item>
        <item>School</item>
        <item>Hotel</item>
        <item>Cottage</item>
        <item>Abroad</item>
        <item>Kinder Garden</item>
        <item>Library</item>
        <item>Balcony</item>
        <item>Mountain</item>
        <item>Lake</item>
        <item>River</item>
        <item>Beach</item>
        <item>Island</item>
        <item>Pool</item>
        <item>Basement</item>
        <item>Bathroom</item>
        <item>Jungle</item>
        <item>Monastery</item>
        <item>Monastery</item>
        <item>Cafe</item>
        <item>Circus</item>
        <item>Elevator</item>
        <item>Zoo</item>
        <item>Disneyland</item>
        <item>Building</item>
        <item>Market</item>
        <item>Pharmacy</item>
        <item>Restaurant</item>
        <item>Cinema</item>
        <item>Theater</item>
        <item>Field</item>
        <item>Soccer field</item>
        <item>Bank</item>
        <item>Prison</item>
        <item>Police</item>
        <item>Hospital</item>
        <item>Hall</item>
        <item>University</item>
        <item>Shopping Center</item>
        <item>Village</item>
        <item>City</item>
        <item>Bus Station</item>
        <item>Stadium</item>
        <item>Paris</item>
        <item>London</item>
        <item>New York</item>
    </string-array>

    <string name="rulesFull">"Detective Game" is a fun, entertaining game, it is convenient to play during friendly meetings.
Enter the number of players and the duration of the game, click "start". Then, in turn, each player picks up the phone, presses "show", looks at the word, presses "hide", passes the phone to the other player, and so on, until everyone gets the word. Then click "start time".
Each time the program shows the players a word from the selected dictionary. Everyone has the same word, except for one whose word "Spy" is used instead. Then the players try to find out who the spy is by asking each other questions, and the spy tries to guess the word during that Q&amp;A. As soon as the time is up, voting begins, everyone keeps their hands up, after 3 seconds everyone points at the same time to the player they suspect as a spy. If the players correctly found the spy as a result of the voting, the spy loses. In case of wrong voting, the spy wins. After the voting, the game ends.
If during the game the spy guesses the word, he can just say the word and win at any moment. In case of announcing a wrong word, he will lose.
During the question and answer session, the player should try to answer the question given to him. As much as possible, so that the spy can not immediately guess the word from his answer, but the other players understand the content of the answer.
- The questions are asked one by one, each player answers the Question given to him and asks a question to whom he will want except the one who asked him the last question.
- It is forbidden to lie while answering the question.
You always have to answer correctly. You can answer approximate, not very specific, but you can answer.
- It is forbidden to ask such questions - "What is the first letter of a word", "How many letters does a word consist of", etc.
</string>


</resources>