<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
    <variable
        name="viewModel"
        type="com.detectiveme.ui.playerCount.PlayerCountViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainDarkBckg"
        tools:context=".ui.playerCount.PlayerCountFragment">

        <TextView
            android:id="@+id/txtPlayerCountChoose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/choose"
            android:textAlignment="textStart"
            android:textColor="@color/textColor"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/btnBack"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtPlayerCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/player_count"
            android:textAlignment="textStart"
            android:textColor="@color/redColor"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txtPlayerCountChoose"
            app:layout_constraintTop_toBottomOf="@+id/txtPlayerCountChoose" />

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtPlayerCountChoose" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPlayerCount">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvTotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    app:cardCornerRadius="15dp"
                    app:layout_constraintBottom_toTopOf="@+id/cvSpies"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/txtAlloverPlayers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="16dp"
                            android:text="@string/total_players"
                            android:textAlignment="center"
                            android:textColor="@color/mainDarkBckg"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toTopOf="@+id/numTotalPlayers"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageButton
                            android:id="@+id/btnAddTotal"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="16dp"
                            android:background="@drawable/ic_plus"
                            android:elevation="10dp"
                            android:onClick="@{() -> viewModel.updateTotalPlayers(true)}"
                            android:foreground="?attr/selectableItemBackground"
                            app:layout_constraintBottom_toBottomOf="@+id/numTotalPlayers"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/txtAlloverPlayers" />

                        <TextView
                            android:id="@+id/numTotalPlayers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:text="2"
                            android:textAlignment="center"
                            android:textColor="@color/mainDarkBckg"
                            android:textSize="34sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />

                        <ImageButton
                            android:id="@+id/btnMinusTotal"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginEnd="16dp"
                            android:background="@drawable/ic_minus"
                            android:elevation="10dp"
                            android:foreground="?attr/selectableItemBackground"
                            app:layout_constraintBottom_toBottomOf="@+id/numTotalPlayers"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/txtAlloverPlayers" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvSpies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="24dp"
                    app:cardCornerRadius="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cvTotal">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/txtFakePlayers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="16dp"
                            android:text="@string/spies_from_total"
                            android:textAlignment="center"
                            android:textColor="@color/mainDarkBckg"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toTopOf="@+id/numFakePlayers"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageButton
                            android:id="@+id/btnAddFake"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="16dp"
                            android:background="@drawable/ic_plus"
                            android:elevation="10dp"
                            android:onClick="@{() -> viewModel.updateTotalSpies(true)}"
                            android:foreground="?attr/selectableItemBackground"
                            app:layout_constraintBottom_toBottomOf="@+id/numFakePlayers"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/txtFakePlayers" />

                        <TextView
                            android:id="@+id/numFakePlayers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:text="1"
                            android:textAlignment="center"
                            android:textColor="@color/mainDarkBckg"
                            android:textSize="34sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />

                        <ImageButton
                            android:id="@+id/btnMinusFake"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginEnd="16dp"
                            android:background="@drawable/ic_minus"
                            android:elevation="10dp"
                            android:foreground="?attr/selectableItemBackground"
                            app:layout_constraintBottom_toBottomOf="@+id/numFakePlayers"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/txtFakePlayers" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvMinutes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="24dp"
                    app:cardCornerRadius="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cvSpies">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/txtMinutes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="16dp"
                            android:text="@string/time_minutes"
                            android:textAlignment="center"
                            android:textColor="@color/mainDarkBckg"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toTopOf="@+id/numMinutes"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageButton
                            android:id="@+id/btnAddMinute"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="16dp"
                            android:background="@drawable/ic_plus"
                            android:elevation="10dp"
                            android:onClick="@{() -> viewModel.updateTotalMins(true)}"
                            android:foreground="?attr/selectableItemBackground"
                            app:layout_constraintBottom_toBottomOf="@+id/numMinutes"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/txtMinutes" />

                        <TextView
                            android:id="@+id/numMinutes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:text="1"
                            android:textAlignment="center"
                            android:textColor="@color/mainDarkBckg"
                            android:textSize="34sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />

                        <ImageButton
                            android:id="@+id/btnMinusMinute"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginEnd="16dp"
                            android:background="@drawable/ic_minus"
                            android:elevation="10dp"
                            android:foreground="?attr/selectableItemBackground"
                            app:layout_constraintBottom_toBottomOf="@+id/numMinutes"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/txtMinutes" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/btnStart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="64dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/redColor"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/start"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cvMinutes" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>